NEXT-18719 - Fix product variant title truncation

--- a/src/Administration/Resources/app/administration/src/module/sw-order/component/sw-order-line-items-grid/sw-order-line-items-grid.scss
+++ b/src/Administration/Resources/app/administration/src/module/sw-order/component/sw-order-line-items-grid/sw-order-line-items-grid.scss
@@ -48,7 +48,7 @@ $sw-order-line-item-border: $color-gray-300;
     }
 
     .sw-product-variant-info {
-        max-width: 200px;
+        max-width: 240px;
     }
 
     .sw-data-grid .sw-data-grid__cell--selection {
